<resources>
    <string name="app_name">Asistente De Compras</string>
    <string name="txt_usuario_String">Cedula</string>
    <string name="bt_ingresar_String">Ingresar</string>
    <string name="bt_registrar_String">Registrar</string>
    <string name="txt_nombre_String">Nombre</string>
    <string name="bt_nueva_lista_String">Nueva Lista</string>
    <string name="bt_listas_String">Listas</string>
    <string name="bt_productos_String">Productos</string>
    <string name="txt_snack_String">Snacks</string>
    <string name="txt_peces_String">Peces</string>
    <string name="txt_siguiente_String">Siguiente</string>
    <string name="txt_Prueba_String"></string>
    <string name="txt_boton_guardar_String">Guardar</string>
    <string name="txtAgregarProductos">Aqui puede ingresar productos a su lista</string>
    <string name="txtNuevaLista">Detalles Nueva Lista</string>
    <string name="ayudaNombreLista">Ingrese el nombre de la lista</string>
    <string name="txtFechaACompra">Fecha a realizar la compra</string>
    <string name="txtListaGuardada">Lista Guardada</string>
    <string name="txt_nombre_lista_String">Nombre de tu lista</string>
    <string name="txt_tus_listas_String">Tus listas</string>
    <string name="txt_tus_productos_String">TUS PRODUCTOS</string>
    <string name="txt_agregar_productos_String">Agregar productos</string>
    <string name="bnCerraSe">Cerrar Sesión</string>
</resources>