<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nuevaLista">

    <TextView
        android:id="@+id/txtNuevaLista"
        android:layout_width="233dp"
        android:layout_height="26dp"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:text="@string/txtNuevaLista"
        android:textColor="#E4302B"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/NombreListaNueva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="277dp"
        android:layout_height="293dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/NombreListaNueva"
        android:layout_width="272dp"
        android:layout_height="40dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:ems="10"
        android:hint="@string/ayudaNombreLista"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtFechaDeCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="221dp"
        android:layout_marginRight="221dp"
        android:text="@string/txtFechaAComprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnguardarLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginEnd="187dp"
        android:layout_marginRight="187dp"
        android:layout_marginBottom="76dp"
        android:contentDescription="@string/txtListaGuardada"
        android:onClick="abrirIntAgregarProductosListaVacia"
        android:tint="#1E88E5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />


</androidx.constraintlayout.widget.ConstraintLayout>